<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forecast">



    <TextView
        android:id="@+id/tx_q1"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q1_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tx_q1_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q1"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q1_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q2"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q1_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q2_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q2_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q2"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Weather"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q3"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q2_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q3_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q3_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q3"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q3_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q4"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q3_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q4_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q4"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q4_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q5"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q4_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q5_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q5_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q5"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q5_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q5_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q5"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tx_q5_a"
        android:text="kg/ha"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tx_q6"
        android:layout_width="376dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q5_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q6_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q6_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q6"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q6_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q7"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q6_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/q7_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tx_q7_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q7"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/q7_b"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tx_q7_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q7"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/tx_q7_a"
        android:text="kg/ha"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tx_a0"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q7_a"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/a0"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/tx_a1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_a0"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:text="@string/a1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt_tick"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_a0"
        android:layout_alignParentStart="true"
        android:layout_marginStart="325dp"
        android:layout_marginTop="15dp"
        android:text="√" />

</RelativeLayout>