<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".DiseaseForecastActivity">

    <TextView
        android:id="@+id/tx_q1"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:text="@string/q1"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sound"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="avatar" />

    <Button
        android:id="@+id/sound_date"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/bt_date"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="avatar" />

    <TextView
        android:id="@+id/tx_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_date"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="100dp"
        android:text="@string/date"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tx_q1"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="90dp"
        android:text="@string/bt_select" />


    <Button
        android:id="@+id/sound_select"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tx_q1"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="99dp"
        android:layout_toEndOf="@+id/bt_date"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="avatar" />

    <Button
        android:id="@+id/sound_next"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="252dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="549dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="avatar" />

    <Button
        android:id="@+id/bt_next_ricevarirty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="288dp"
        android:layout_marginTop="540dp"
        android:text="@string/bt_next" />


</RelativeLayout>