<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageRecognitionActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/BS"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:foregroundGravity="center"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/sample" />

    <Button
        android:id="@+id/button"
        android:layout_width="93dp"
        android:layout_height="91dp"
        android:layout_marginEnd="236dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_add_photo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/RB"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="93dp"
        android:layout_height="91dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_add_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/NoticeBtn"
        android:layout_width="31dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Noticetv" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/ic_volume_up_black_24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Noticetv"
        android:layout_width="297dp"
        android:layout_height="100dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/notice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>